<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_launch</name>
  <version>1.0.0</version>
  <description>Isaac Sim LANCE Launcher for ROS2</description>
  <maintainer email="samrichter888@gmail.com">Sam Richter</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>xacro</depend>
  <!-- <depend>cardinal_perception</depend> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
